--- a/CalOrdersJET/src/js/views/orderDetail.html
+++ b/CalOrdersJET/src/js/views/orderDetail.html
@@ -64,11 +64,15 @@
 
         <div class="oj-flex">
             <div class="oj-flex-item oj-sm-2 confirmation_bold_label">Order Status:</div>
-            <div class="oj-flex-item oj-sm-6" data-bind="text: orderDetail().statusDescription"></div>
+            <div class="oj-flex-item oj-sm-8">
+                <div data-bind="text: orderDetail().statusDescription"></div>
+                <!-- ko if: showCancelButton -->
+                <div class="oj-padding-vertical"></div>
+                <button  id="cancelOrder" data-bind="click: showCancelDialog, ojComponent: {component: 'ojButton', label: 'Cancel Order'}"></button>
+                <!-- /ko -->
+            </div> 
         </div>
 
-        
-        <div class="oj-padding-vertical"></div>
 
         <!-- ko if: ready -->
         <div class="oj-flex oj-sm-12">
@@ -115,6 +119,37 @@
     </div>
 </div>
 
+
+<!-- start cancel dialog box -->
+<div id="cancelOrderConfirmationDialogWrapper">
+    <div style="display:none" id="cancelOrderConfirmationDialog" title="Cancel Order" 
+         data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide'}">
+
+        <div class="oj-dialog-body">
+
+            <div class="oj-flex">
+                <div class="oj-flex-item oj-sm-justify-content-center">
+                    <span data-bind="text: 'Your order will be cancelled if you continue. This action can not be reversed, are you sure you want to cancel this order?'"></span>
+                </div>
+            </div>
+        </div>
+        <div class="oj-dialog-footer">
+            <div class="dialogButtonLeft">
+                <button id= "back"
+                        data-bind="click: backAction, ojComponent: { component: 'ojButton', label: 'Back'}">
+                </button> 
+            </div>
+
+            <div class="dialogButtonRight">
+                <button id= "cancelOrder"
+                        data-bind="click: cancelOrderAction, ojComponent: { component: 'ojButton', label: 'Cancel Order'}">
+                </button> 
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- end cancel dialog box-->
 
 <!-- Product Card View -->
 <script id="productCardLayout" type="text/html">
@@ -199,22 +234,22 @@
                          height="100" width="100" 
                          data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                 </div>
-                
+
                 <div class="oj-flex-item oj-sm-4">
                     <div class="confirmation_bold_label" data-bind="text: $data['prdName']"></div>
                 </div>
-                
+
                 <div class="oj-flex-item oj-sm-2">
                     <span>Quantity: </span><span data-bind="text: $data['prdQuantity']"/>
                 </div>
-                
+
                 <div class="oj-flex-item oj-sm-2">
 
                     <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
                         <div data-bind="text: $parent.getPrice($data['prdEachPrice']) + '/ea'"></div>
                     </div>
                 </div>
-                
+
                 <div class="oj-flex-item oj-sm-2">
 
                     <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
