--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -26,7 +26,7 @@
 
     <!-- Page Title -->
     <div id="pageTitleContainer" class="oj-flex-item oj-sm-2">
-        <h2 style="margin-bottom:0">Products</h2>
+        <h2 style="margin-bottom:0">Product Search</h2>
     </div>
 
     <!-- global error messages -->
