--- a/CalOrdersJET/src/js/views/orderHistoryAdmin.html
+++ b/CalOrdersJET/src/js/views/orderHistoryAdmin.html
@@ -39,7 +39,7 @@
                                 columnsDefault: {sortable: 'enabled'}, 
                                 columns: [
                                   {headerText: 'Order No.', field: 'orderHistoryId', sortable: 'enabled'},
-                                  {headerText: 'Date', field: 'orderDate', sortable: 'enabled'},
+                                  {headerText: 'Date', field: 'orderDate', sortable: 'enabled', renderer: orderDateRenderer},
                                   {headerText: 'Status', field: 'orderStatus', sortable: 'enabled'},   
                                   {headerText: 'PO No.', field: 'orderPoNumber', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
                                   {headerText: 'Agency', field: 'orderAgency', sortable: 'enabled', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
