[#140681309] [#140682187] Bug for "Misspelling "breif" in Product Description" and bug for "Product form will not accept text"

--- a/CalOrdersJET/src/js/views/productUpdate.html
+++ b/CalOrdersJET/src/js/views/productUpdate.html
@@ -82,9 +82,9 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productName, required: true,
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,128}',
-                                                    hint: 'Enter a product name that is less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                    messageDetail: 'The product name must be less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} },
+                                                    pattern: '[:\\-!/@#$%^&*,?.;:()+={}<>\'\&quot\\w\\s]{1,128}',
+                                                    hint: 'Enter a product name that is less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?+={}<>,\'\&quot',
+                                                    messageDetail: 'The product name must be less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?+={}<>,\'\&quot'} },
                                                     validateProductName],
                                                         messagesCustom: productNameMessage,
                                                    invalidComponentTracker: tracker}">
@@ -124,9 +124,9 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productOEMName, required: true,
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,45}',
-                                                    hint: 'Enter a product OEM name that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                    messageDetail: 'The product OEM name must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }
+                                                    pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,45}',
+                                                    hint: 'Enter a product OEM name that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                    messageDetail: 'The product OEM name must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }
                                                     ],
                                                    invalidComponentTracker: tracker}">
                             </div>
@@ -141,9 +141,9 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productOEMPartNumber, required: true,
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,45}',
-                                                    hint: 'Enter a product OEM part number that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                    messageDetail: 'The product OEM part number must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }
+                                                    pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,45}',
+                                                    hint: 'Enter a product OEM part number that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                    messageDetail: 'The product OEM part number must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }
                                                     ],
                                                    invalidComponentTracker: tracker}">
                             </div>
@@ -158,9 +158,9 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productSKU, required: true,
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,45}',
-                                                    hint: 'Enter a product SKU that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                    messageDetail: 'The product SKU must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }
+                                                    pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,45}',
+                                                    hint: 'Enter a product SKU that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                    messageDetail: 'The product SKU must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }
                                                     ],
                                                    invalidComponentTracker: tracker}">
                             </div>
@@ -175,9 +175,9 @@ THE SOFTWARE.
                                                 component: 'ojInputText', 
                                                 value:productContractLineItem, 
                                                 validators: [{type: 'regExp', options: {
-                                                    pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,45}',
-                                                    hint: 'Enter a product contract line item that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                    messageDetail: 'The product contract line item must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }
+                                                    pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,45}',
+                                                    hint: 'Enter a product contract line item that is less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                    messageDetail: 'The product contract line item must be less than 45 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }
                                                     ],
                                                    invalidComponentTracker: tracker}">
                             </div>
@@ -283,9 +283,9 @@ THE SOFTWARE.
                                     value: productDescription, 
                                     required: true,  
                                     validators: [{type: 'regExp', options: {
-                                                 pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,128}',
-                                                 hint: 'Enter a breif product description that is less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                 messageDetail: 'The breif product description must be less than 128 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }],
+                                                 pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,128}',
+                                                 hint: 'Enter a brief product description that is less than 128 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                 messageDetail: 'The brief product description must be less than 128 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }],
                                     invalidComponentTracker: tracker}"></textarea>
                             </div>
                         </div>
@@ -301,9 +301,9 @@ THE SOFTWARE.
                                     value: productFullDesc, 
                                     required: true,  
                                     validators: [{type: 'regExp', options: {
-                                                 pattern: '[:\\-!@#$%^&*,?.;:()\'\&quot\\w\\s]{1,2048}',
-                                                 hint: 'Enter a full product description that is less than 2048 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot',
-                                                 messageDetail: 'The full product description must be less than 2048 alphanumeric characters (including the following characters :-!@#$%^&*();?\'\&quot'} }],
+                                                 pattern: '[:\\-!@#$%^&*/,?.;:()+={}<>\'\&quot\\w\\s]{1,2048}',
+                                                 hint: 'Enter a full product description that is less than 2048 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot',
+                                                 messageDetail: 'The full product description must be less than 2048 alphanumeric characters (including the following characters :-!@#$%^&*/();?+={}<>,\'\&quot'} }],
                                     invalidComponentTracker: tracker}"></textarea>
                             </div>
                         </div>
