[#140721921] Cancel Order does not show as canceled in Order History after order has been canceled. Mitigated the problem with a refresh button

--- a/CalOrdersJET/src/js/views/orderHistory.html
+++ b/CalOrdersJET/src/js/views/orderHistory.html
@@ -31,7 +31,7 @@
     <div class="oj-panel oj-flex">
         <!-- buttons -->
         <div class="oj-flex-item">    
-            <button id= "cancel" type="button"
+            <button id= "refresh" type="button"
                     data-bind="click: refreshClick, ojComponent: { component: 'ojButton', label: 'Refresh' }">
             </button>             
             <div class="oj-padding-vertical"></div>
