--- a/CalOrdersJET/src/js/views/orderHistoryAdmin.html
+++ b/CalOrdersJET/src/js/views/orderHistoryAdmin.html
@@ -31,7 +31,7 @@
     <div class="oj-panel oj-flex">
         <!-- buttons -->
         <div class="oj-flex-item">    
-            <button id= "cancel" type="button"
+            <button id= "refresh" type="button"
                     data-bind="click: refreshClick, ojComponent: { component: 'ojButton', label: 'Refresh' }">
             </button>             
             <div class="oj-padding-vertical"></div>
