[#140702579] Made changes to Cart so that Order and Remove Selected buttons are disabled when the cart is empty.  Also updated the total items in the session so that the cart summary on the Product Search displays correctly when items are removed or when quantities are updated.

--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -54,7 +54,7 @@
                         data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
                 </button> 
                 <div class="oj-padding-horizontal"></div>
-                <button id= "placeOrder" 
+                <button id= "placeOrderTop" 
                         data-bind="click: placeOrderClick, ojComponent: { component: 'ojButton', label: 'Order' }">
                 </button> 
             </div>
@@ -106,7 +106,7 @@
                         data-bind="click: continueShoppingClick, ojComponent: { component: 'ojButton', label: 'Continue Shopping' }">
                 </button> 
                 <div class="oj-padding-horizontal"></div>
-                <button id= "placeOrder" 
+                <button id= "placeOrderBottom" 
                         data-bind="click: placeOrderClick, ojComponent: { component: 'ojButton', label: 'Order' }">
                 </button> 
             </div>
