[#139565407] Added Price and Quantity labels to the cart (and fixed a missing end bracket on Order Confirmation).

--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -133,7 +133,7 @@
         <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', mode: 'loadMore',data: cardViewDataSource, pageSize: 10}">
         </div>
     </div>
-</script
+</script>
 
 
 
